--- a/Defect_corrections_predictor.ipynb
+++ b/Defect_corrections_predictor.ipynb
@@ -346,6 +346,7 @@
     }
    ],
    "source": [
+    "lz = lany_zunger(L, epsilon, q=q)*hart2eV\n",
     "print 'Image Interaction correction (LZ) =', lz, 'eV'\n",
     "print 'Predicted alignment correction    =', q*(alignment_1*N_1 + alignment_2*N_2 + alignment_3*N_3), 'eV'\n",
     "print 'Combined correction               =', lz + q*(alignment_1*N_1 + alignment_2*N_2 + alignment_3*N_3)"
