Added link to the paper

--- a/Defect_corrections_predictor.ipynb
+++ b/Defect_corrections_predictor.ipynb
@@ -6,27 +6,24 @@
    "source": [
     "**IMPORTANT** -- This notebook will not render correctly when opened. From the menu bar above, please select Kernel -> Restart and run all  \n",
     "This will generate the input elements.\n",
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Calculate the image interacton correction (IIC) for a cubic cell using the Lany-Zunger method, and predict the potentail alignment correction from the addition or removal of atoms"
+    "***\n",
+    "\n",
+    "The methods used in this program are described in our paper -- https://doi.org/10.1063/1.5029818\n",
+    "\n",
+    "Image interaction correction is approximated using the Lany-Zunger correction.\n",
+    "\n",
+    "Potential alignment correction is approximated from the atomic radius of the atoms exchanged."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b63071a9b154ff09c021e97d8a27378",
+       "model_id": "4787c66c8ef94895973a748c69a88774",
        "version_major": 2,
        "version_minor": 0
       },
@@ -40,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50a65ba2270d45ea98c6a0f222a6788a",
+       "model_id": "47bd862cd8904bc0a9a88422ab18589f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8130265ebd264a65b6ab5ed59ed2cfe6",
+       "model_id": "a033fc234c964b04aee8fe398049d3af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "095af0fc91064bfba59ca3facedcbc37",
+       "model_id": "70545e904a894f80839735caf3988670",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fa671e3de6140e98c110bf70128ee85",
+       "model_id": "eb80d50410ef4092ab3538f0ffdb7ee5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f91cc44985c34d10a463f3e706caebe5",
+       "model_id": "9bdcd8934d6541fb8de9c9e59efd6aac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0391eb905dd34199a712fa911978b085",
+       "model_id": "1d506220ad13419eb68a32e180d46fcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c68abf23ca3d4b2c8e7e66d17215975b",
+       "model_id": "446e1130414f4a7480547ca52b7c30e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddf63ae5ce7b4bdd9d1e6014d987d5d8",
+       "model_id": "569612430a3645eda45c35e9049423b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa047828629d4f178bc136a612455478",
+       "model_id": "d3753c6931524ad889301147a897f267",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +166,8 @@
      "text": [
       "Image interaction correction\n",
       "L = 10.0 (Angstrom) epsilon= 10.0 q = 1.0\n",
-      "LZ IIC 0.257832318328 eV\n",
+      "MP IIC 0.204280561608 eV\n",
+      "LZ IIC 0.136438987098 eV\n",
       "\n",
       "\n",
       "Prediction of potential alignment\n",
@@ -179,15 +177,22 @@
       "q = 1.0 (Electron charges) L = 10.0 (Angstrom)\n",
       "\n",
       "\n",
-      "Image Interaction correction (LZ) = 0.257832318328 eV\n",
+      "Image interaction correction (LZ) = 0.136438987098 eV\n",
       "Predicted alignment correction    = -0.0901244 eV\n",
-      "Combined correction               = 0.1677079183284979 eV\n"
+      "Combined correction               = 0.04631458709811209 eV\n"
      ]
     }
    ],
    "source": [
     "%run input_and_calc.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
